--- a/index.html
+++ b/index.html
@@ -74,10 +74,9 @@
                                 I’m interested in <a href="https://www.reddit.com/r/homelab/">homelabbing</a> and <a href="https://www.reddit.com/r/selfhosted/">self-hosting</a> to better 
                                 understand system administration. 
                                 I like to garden, and make pizza by hand. 
-                                And I write a demography blog about some of the quirkier issues.
-                                My nose is often burried in a book (currently reading <i>Good Omens</i>), and my hands are usually occupied 
+                                My nose is often burried in a book (currently reading <i>Snow Crash</i>), and my hands are usually occupied 
                                 by a Rubik’s Cube or other twisty-puzzle (my best 3x3 time is 24.78 seconds). 
-                                Frequently I’m doing any of the things listed on this site with my 5-year-old daughter, who always needs to know ‘why?’.
+                                Frequently I’m doing any of the things listed on this site with my kids, who always need to know ‘why?’.
                             </p>
                             <p>
                                 This website is a place for me to share things. Maybe I’m documenting an electronics project. 
