Update reading list and current book

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                                 I’m interested in <a href="https://www.reddit.com/r/homelab/">homelabbing</a> and <a href="https://www.reddit.com/r/selfhosted/">self-hosting</a> to better 
                                 understand system administration. 
                                 I like to garden, and make pizza by hand. 
-                                My nose is often burried in a book (currently reading <i>Snow Crash</i>), and my hands are usually occupied 
+                                My nose is often burried in a book (currently reading <i>Howl's Moving Castle</i>), and my hands are usually occupied 
                                 by a Rubik’s Cube or other twisty-puzzle (my best 3x3 time is 24.78 seconds). 
                                 Frequently I’m doing any of the things listed on this site with my kids, who always need to know ‘why?’.
                             </p>
