--- a/reading.html
+++ b/reading.html
@@ -68,6 +68,24 @@
                         <div class="tile is-parent">
                             <div class="tile is-child box">
                                 <p class="title">
+                                    Snow Crash | Neal Stephenson
+                                </p>
+                                <p class="subtitle">
+                                    Finished on February 4, 2024
+                                </p>
+                                <p>
+                                    In reality, Hiro Protagonist delivers pizza for Uncle Enzo's CosoNostra Pizza Inc., but in the Metaverse he's a warrior prince. 
+                                    Plunging headlong into the enigma of a new computer virus that's striking down hackers everywhere, he races along the neon-lit 
+                                    streets on a search-and-destroy mission for the shadowy virtual villain threatening to bring about infocalypse.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="tile is-ancestor">
+                        <div class="tile is-parent">
+                            <div class="tile is-child box">
+                                <p class="title">
                                     The Dark Side of the Sun | Terry Pratchett
                                 </p>
                                 <p class="subtitle">
