Update reading list

--- a/reading.html
+++ b/reading.html
@@ -68,6 +68,46 @@
                         <div class="tile is-parent">
                             <div class="tile is-child box">
                                 <p class="title">
+                                    Castle in the Air | Diana Wynne Jones
+                                </p>
+                                <p class="subtitle">
+                                    Finished on February 21, 2024
+                                </p>
+                                <p>
+                                    Far to the south of the land of Ingary, in the Sultanates of Rashpuht, there lived in the city of Zanzib a young and not very 
+                                    prosperous carpet dealer named Abdullah who loved to spend his time daydreaming. He was content with his life and his daydreams 
+                                    until, one day, a stranger sold him a magic carpet. That very night, the carpet flew him to an enchanted garden. There, he met and 
+                                    fell in love with the beauteous princess Flower-in-the-Night, only to have her snatched away, right under his very nose, by a wicked 
+                                    djinn. With only his magic carpet and his wits to help him, Abdullah sets off to rescue his princess...
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="tile is-ancestor">
+                        <div class="tile is-parent">
+                            <div class="tile is-child box">
+                                <p class="title">
+                                    Howl's Moving Castle | Diana Wynne Jones
+                                </p>
+                                <p class="subtitle">
+                                    Finished on February 14, 2024
+                                </p>
+                                <p>
+                                    Sophie lived in the town of Market Chipping, which was in Ingary, a land in which anything could happen, and often did. As her 
+                                    younger sisters set out to seek their fortunes, Sophie stayed in her father's hat shop. Which proved most unadventurous, until 
+                                    the Witch of the Waste came in to buy a bonnet and turned Sophie into an old lady. Now Sophie must seek her own fortune. Which 
+                                    means striking a bargain with the lecherous Wizard Howl. Which means entering his ever-moving castle, taming a blue fire-demon, 
+                                    and meeting the Witch of the Waste head-on. Which was more than Sophie bargained for...
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="tile is-ancestor">
+                        <div class="tile is-parent">
+                            <div class="tile is-child box">
+                                <p class="title">
                                     Snow Crash | Neal Stephenson
                                 </p>
                                 <p class="subtitle">
