--- a/about.html
+++ b/about.html
@@ -89,7 +89,7 @@
                         I like to keep up with dwarf planet and exoplanet news, and I chart nearby star systems in 3D.
                     </p>
                     <p>
-                        My favourite authors include J. R. R. Tolkien and Terry Pratchett. <br>
+                        My favourite authors include J. R. R. Tolkien, Terry Pratchett, and Ursula K. Le Guin. <br>
                         My favourite poets are Siegfried Sassoon and Robert Graves. <br>
                         My favourite social theorists are Zygmunt Bauman and Pierre Bourdieu.
                     </p>
