--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 
                 <div class="tile is-ancestor">
                     <div class="tile is-parent is-one-third">
-                        <div class="tile is-child notification is-primary">
+                        <div class="tile is-child notification is-info">
                             <p class="title">
                                 <a href="/posts/stalk-market.html">
                                     Stalk Market
@@ -121,7 +121,7 @@
                     </div>
 
                     <div class="tile is-parent is-one-third">
-                        <div class="tile is-child notification is-warning">
+                        <div class="tile is-child notification is-link">
                             <p class="title">
                                 <a href="/posts/baking-perfect-bacon.html">
                                     Baking Perfect Bacon
@@ -135,7 +135,7 @@
                     </div>
 
                     <div class="tile is-parent is-one-third">
-                        <div class="tile is-child notification is-danger">
+                        <div class="tile is-child notification is-info">
                             <p class="title">
                                 <a href="/posts/understanding-the-rubiks-cube.html">
                                     Understanding the Rubik’s Cube
@@ -168,7 +168,7 @@
                     </div>
 
                     <div class="tile is-parent is-one-third">
-                        <div class="tile is-child notification is-success">
+                        <div class="tile is-child notification is-info">
                             <p class="title">
                                 <a href="/posts/drop-probability-in-games-2.html">
                                     The Probability Distribution of Item Drops in Video Games, Part 2
@@ -182,7 +182,7 @@
                     </div>
 
                     <div class="tile is-parent is-one-third">
-                        <div class="tile is-child notification is-info">
+                        <div class="tile is-child notification is-link">
                             <p class="title">
                                 <a href="/posts/converting-equatorial-to-cartesian.html">
                                     Converting Equatorial Celestial Coordinates to a Cartesian System
