--- a/reading.html
+++ b/reading.html
@@ -67,6 +67,22 @@
                         <div class="tile is-parent">
                             <div class="tile is-child box">
                                 <p class="title">
+                                    Iron Flame | Rebecca Yarros
+                                </p>
+                                <p class="subtitle">
+                                    Finished on July 15, 2024
+                                </p>
+                                <p>
+                                    Book two in the <i>Empyrean</i> series.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="tile is-ancestor">
+                        <div class="tile is-parent">
+                            <div class="tile is-child box">
+                                <p class="title">
                                     Fourth Wing | Rebecca Yarros
                                 </p>
                                 <p class="subtitle">
